added functionality to display reserved dates

--- a/src/main/resources/lang/messages_bg.properties
+++ b/src/main/resources/lang/messages_bg.properties
@@ -6,3 +6,13 @@ location=Местоположение
 pricing.and.availability=Цена и Резервираност
 photos=Снимки
 navigate.with.google.maps=Навигирайте чрез Google карти
+add.reservation=Добави Резервация
+remove.reservation=Премахни Резервация
+add.reservation.panel=Панел за Добавяне
+remove.reservation.panel=Панел за Премахване
+year=Година
+month=Месец(1-12)
+submit=Изпрати
+days.to.remove=Дни за Премахване
+remove=Премахни
+select.days=Избери Дни
