--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -6,3 +6,13 @@ location=Location
 pricing.and.availability=Pricing and Availability
 photos=Photos
 navigate.with.google.maps=Navigate with Google Maps
+add.reservation=Add Reservation
+remove.reservation=Remove Reservation
+add.reservation.panel=Add Reservation Panel
+remove.reservation.panel=Remove Reservation Panel
+year=Year
+month=Month(1-12)
+submit=Submit
+days.to.remove=Days to Remove
+remove=Remove
+select.days=Select Days
