changed some styles

--- a/src/main/resources/lang/messages_bg.properties
+++ b/src/main/resources/lang/messages_bg.properties
@@ -16,3 +16,21 @@ submit=Изпрати
 days.to.remove=Дни за Премахване
 remove=Премахни
 select.days=Избери Дни
+
+home.card1.title=За нас:
+home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
+attractions.title=Какво можете да правите в района:
+attractions.card1.title=Плаж Атия
+attractions.card1.body=Плаж Атия се намира в близост до нос Атия в община Созопол, област Бургас. Плажът е с дължина от около 3 км. Пясъкът е с жълто-черен цвят, плътен и смесен със златисти люспички. Водата е кристално чиста, а морското дъно е гладко, има лек наклон и е песъчливо. През лятото температурата на водата достига до 25-26 градуса. Плажът е незастроен и почти безлюден, което го прави изключително подходящ за плажуване и риболов.
+attractions.card2.title=Местност Бакарлък
+attractions.card2.body=Бакърлъка е защитена местност в България. Намира се в землището на село Равадиново, област Бургас. Защитената местност е с площ 7,21 ha. Обявена е на 15 октомври 2004 г. с цел опазване на естествено местообитание на хагерово лале и съобщества на други защитени и редки растителни видове, забележителен ландшафт и скали. Защитената местност попада в територията на защитената зона от Натура 2000 по директивата за птиците Бакърлъка.В защитената местност се забраняват строителство, разкриване на кариери и други дейности, които водят до промяна и унищожаване на ландшафта или водния режим на местността; бране на диви цветя, събиране на билки, кастрене, чупене на клони и увреждане на дърветата;извеждане на сечи, освен санитарни и отгледни;провеждане на горскостопански мероприятия през периода 1 февруари - 30 юли;внасяне на нехарактерни за района растителни и животински видове;паша на домашни животни.
+location.card1.title=Местоположение:
+location.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
+photos.card1.title=Снимки:
+photos.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
+pricing.card1.title=Цена:
+pricing.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
+services.card1.title=Домакини:
+services.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
+services.card2.title=Услуги:
+services.card2.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
