polished navigation links

--- a/src/main/resources/lang/messages_bg.properties
+++ b/src/main/resources/lang/messages_bg.properties
@@ -3,7 +3,7 @@ about=За нас
 attractions=Забавления
 services=Услуги
 location=Местоположение
-pricing.and.availability=Цена и Резервираност
+pricing.and.availability=Цена
 photos=Снимки
 navigate.with.google.maps=Навигирайте чрез Google карти
 add.reservation=Добави Резервация
