--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -3,7 +3,7 @@ about=About
 attractions=Attractions
 services=Services
 location=Location
-pricing.and.availability=Pricing and Availability
+pricing.and.availability=Pricing
 photos=Photos
 navigate.with.google.maps=Navigate with Google Maps
 add.reservation=Add Reservation
