--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -3,7 +3,7 @@ about=Для нас
 attractions=Развлечение
 services=Услуги
 location=Расположение
-pricing.and.availability=Цена и наличие
+pricing.and.availability=Цена
 photos=Картинки
 navigate.with.google.maps=Навигация с помощью Google Maps
 add.reservation=Добавить бронирование
