Added new table for reservation dates, finished admin page. Now admin can add/edit/delete reservations and they are displayed to him

--- a/src/main/resources/lang/messages_bg.properties
+++ b/src/main/resources/lang/messages_bg.properties
@@ -17,6 +17,16 @@ days.to.remove=Дни за Премахване
 remove=Премахни
 select.days=Избери Дни
 
+edit=Коригирай
+delete=Изтрий
+color=Избери Цвят
+name=Име
+description=Информация
+return=Обратно
+confirm.delete.message=Наистина ли искате да изтриете тази резервация?
+admin=Администратор
+
+
 home.card1.title=За нас:
 home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
 attractions.title=Какво можете да правите в района:
