--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -17,6 +17,15 @@ days.to.remove=Days to Remove
 remove=Remove
 select.days=Select Days
 
+edit=Edit
+delete=Delete
+color=Select Color
+name=Name
+description=Description
+return=Return
+confirm.delete.message=Are you sure you want to delete the reservation?
+admin=Admin
+
 home.card1.title=About us:
 home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
 attractions.title=What can we do in the area:
