--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -17,6 +17,16 @@ days.to.remove=Дней до удаления
 remove=Удалять
 select.days=Выберите дни
 
+edit=Правильный
+delete=Удалить
+color=Выберите цвет
+name=Имя
+description=Информация
+return=Напротив
+confirm.delete.message=Вы уверены, что хотите удалить это бронирование?
+admin=Администратор
+
+
 home.card1.title=Для нас:
 home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
 attractions.title=Что можно сделать в этом районе:
