added stats endpoiint for finding incomes, expenses and incomes - expenses for passed period

--- a/src/main/resources/lang/messages_bg.properties
+++ b/src/main/resources/lang/messages_bg.properties
@@ -16,16 +16,33 @@ submit=Изпрати
 days.to.remove=Дни за Премахване
 remove=Премахни
 select.days=Избери Дни
-
 edit=Коригирай
 delete=Изтрий
 color=Избери Цвят
 name=Име
 description=Информация
 return=Обратно
-confirm.delete.message=Наистина ли искате да изтриете тази резервация?
+confirm.delete.message=Сигурни ли сте, че искате да изтриете тази резервация?
 admin=Администратор
 
+confirm.delete.expense=Сигурни ли сте, че искате да изтриете този разход?
+confirm.delete.income=Сигурни ли сте, че искате да изтриете този приход?
+stats=Статистика
+add.income=Добавете Приход
+add.expense=Добавете Разход
+search.transaction.for.period=Търсете Информация за Период
+start.date=Начална Дата
+end.date=Крайна Дата
+search=Търси
+income.results=Резултати за Приходи
+date=Дата
+amount=Сума
+action=Действие
+expenses.results=Резултати за Разходи
+total.incomes=Приходи Общо
+total.expenses=Разходи Общо
+incomes.minus.expenses=Приходи - Разходи
+add=Добави
 
 home.card1.title=За нас:
 home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
