--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -16,7 +16,6 @@ submit=Submit
 days.to.remove=Days to Remove
 remove=Remove
 select.days=Select Days
-
 edit=Edit
 delete=Delete
 color=Select Color
@@ -25,6 +24,25 @@ description=Description
 return=Return
 confirm.delete.message=Are you sure you want to delete the reservation?
 admin=Admin
+
+confirm.delete.expense=Are you sure you want to delete this expense?
+confirm.delete.income=Are you sure you want to delete this income?
+stats=Statistics
+add.income=Add Income
+add.expense=Add Expense
+search.transaction.for.period=Search Transactions for period
+start.date=Start Date
+end.date=End Date
+search=Search
+income.results=Income Results
+date=Date
+amount=Amount
+action=Action
+expenses.results=Expenses Results
+total.incomes=Total Incomes
+total.expenses=Total Expenses
+incomes.minus.expenses=Incomes - Expenses
+add=Add
 
 home.card1.title=About us:
 home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
