--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -16,7 +16,6 @@ submit=Отправлять
 days.to.remove=Дней до удаления
 remove=Удалять
 select.days=Выберите дни
-
 edit=Правильный
 delete=Удалить
 color=Выберите цвет
@@ -26,6 +25,24 @@ return=Напротив
 confirm.delete.message=Вы уверены, что хотите удалить это бронирование?
 admin=Администратор
 
+confirm.delete.expense=Вы уверены, что хотите удалить этот расход?
+confirm.delete.income=Вы уверены, что хотите удалить этот доход?
+stats=Статистика
+add.income=Добавить доход
+add.expense=Добавить расход
+search.transaction.for.period=Поиск информации о периоде
+start.date=Дата начала
+end.date=Дата окончания
+search=Поиск
+income.results=Результаты доходов
+date=Дата
+amount=Количество
+action=Действие
+expenses.results=Результаты по расходам
+total.incomes=Общий доход
+total.expenses=Общий Расходы
+incomes.minus.expenses=Доходы - Расходы
+add=Добавлять
 
 home.card1.title=Для нас:
 home.card1.body=Lorem ipsum dolor sit amet consectetur adipiscing elit. Consectetur adipiscing elit quisque faucibus ex sapien vitae. Ex sapien vitae pellentesque sem placerat in id. Placerat in id cursus mi pretium tellus duis. Pretium tellus duis convallis tempus leo eu aenean.
